service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-web-app-service
spec:
  selector:
    app: php-web-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
